--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>techstation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,900" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/images/fav-icon.png">
+    <title>Tech Station</title>
   </head>
-  <body>
+  <body class="woocommerce-active page-template-template-homepage-v2 can-uppercase">
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.4.4/js/tether.min.js"></script>
   </body>
 </html>
